Adding first Title Conponent abd startirg to build the Structure  #TODO : Context For the Aplication

--- a/src/Utils/Mixins/Mixins.scss
+++ b/src/Utils/Mixins/Mixins.scss
@@ -5,7 +5,7 @@
 }
 
 @mixin light-mode {
-  --background-color: #f6f8ff;
+  --background-color: #C;
   --card-background-color: #fefefe;
   --font-color: #2b3442;
 }
