--- a/src/modules/Home/Components/SearchBar/SearchBar.scss
+++ b/src/modules/Home/Components/SearchBar/SearchBar.scss
@@ -12,6 +12,13 @@
     outline-width: 0;
     width: 50%;
     font-size: 18px;
+    padding: 0;
+  }
+
+  &__icon {
+    color: #0079ff;
+    font-size: 24px;
+    margin-top: 11.5px;
   }
 
   &__bnt {
@@ -22,9 +29,11 @@
     color: #f3f3f3;
     font-size: 16px;
     font-weight: bold;
+    transition: all 0.3s ease-in-out;
   }
 
   &__bnt:hover {
     cursor: pointer;
+    background-color: #60abff;
   }
 }
