Working on the UserInformation Container

--- a/src/modules/Home/Components/Container/Container.scss
+++ b/src/modules/Home/Components/Container/Container.scss
@@ -1,6 +1,6 @@
 .container {
   background-color: transparent;
-  width: 730px;
+  max-width: 730px;
   height: 500px;
   margin: 0 auto;
   margin-top: 144px;
