--- a/src/modules/Home/Components/UserInformation/UserInformation.scss
+++ b/src/modules/Home/Components/UserInformation/UserInformation.scss
@@ -16,4 +16,22 @@
       border-radius: 50%;
     }
   }
+
+  &__information-base {
+    h2 {
+      margin: 0;
+      letter-spacing: 0;
+      font-size: 26px;
+      font-weight: bold;
+    }
+
+    p {
+      color: #697c9a;
+      margin: 0;
+      margin-top: 8px;
+    }
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
